# crypto-oracle-frontend

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.ebextensions/: 01_packages.config  02_python.config  03_update_stocks_cron.config  04_update_lending_rate.config
cryptooracle/: asgi.py  urls.py  wsgi.py
cryptooracle/settings/: __init__.py  base.py  environment.py  local-development.py  local.py  production.py
predictor/: admin.py  models.py  urls.py  views.py
predictor/management/commands/: update_lending_rate.py  update_stocks.py
predictor/migrations/: 0001_initial.py  0002_auto_20210216_0152.py  0003_auto_20210216_0228.py  0004_trainingsession_uuid.py  0005_auto_20210216_1543.py  0006_auto_20210216_1544.py  0007_auto_20210216_1644.py  0008_trainingsession_scaler_file.py  0009_remove_trainingsession_weights_file.py  0010_remove_trainingsession_scaler_file.py  0011_auto_20210216_1805.py  0012_auto_20210216_1805.py  0013_auto_20210216_1806.py  0014_stockprediction.py  0015_stockprediction_actual.py  0016_trainingsession_evaluation_session.py  0017_auto_20210223_1505.py  0018_lendingrate.py  0019_auto_20210225_1616.py  0020_auto_20210228_1643.py
predictor/templates/predictor/: base.html  evaluations.html  forecast.html  index.html  lending_rates.html
utils/: utils.py
